pihole/services-dns-tcp.yml
---
apiVersion: v1
kind: Service

metadata:
  name: pihole-dns-tcp
  annotations:
    #metallb.universe.tf/address-pool: network-services
    metallb.universe.tf/allow-shared-ip: pihole-svc

spec:
  selector:
    app: pihole 
  
  type: LoadBalancer
  loadBalancerIP: 192.168.1.248
  externalTrafficPolicy: Local
  ports:
    - port: 53
      targetPort: dns
      protocol: TCP
      name: dns
