pihole/services-dns-udp.yml
---
apiVersion: v1
kind: Service

metadata:
  name: pihole-dns-udp
  annotations:
    #metallb.universe.tf/address-pool: network-services
    metallb.universe.tf/allow-shared-ip: pihole-svc

spec:
  selector:
    app: pihole 
  
  type: LoadBalancer
  loadBalancerIP: 192.168.1.248
  externalTrafficPolicy: Local
  ports:
    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp

    - port: 67
      targetPort: client-udp
      protocol: UDP
      name: client-udp
