pihole/services-web.yml
---
apiVersion: v1
kind: Service

metadata:
  name: pihole-web
  annotations:
    #metallb.universe.tf/address-pool: network-services
    metallb.universe.tf/allow-shared-ip: pihole-svc

spec:
  selector:
    app: pihole 
  
  type: LoadBalancer
  loadBalancerIP: 192.168.1.248
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http

    - port: 443
      targetPort: https
      protocol: TCP
      name: https
