pihole/services.yml
---
apiVersion: v1
kind: Service

metadata:
  name: pihole

spec:
  selector:
    app: pihole 
  
  type: NodePort
  #externalIPs:
  # - 192.168.1.221
  #externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http

    - port: 443
      targetPort: https
      protocol: TCP
      name: https

    - port: 53
      targetPort: dns
      protocol: TCP
      name: dns

    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp

    - port: 67
      targetPort: client-udp
      protocol: UDP
      name: client-udp
