pihole/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pihole-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pihole.home.local
      http:
        paths:
        - path: /
          #pathType: prefix
          backend:
            serviceName: pihole-access
            servicePort: 80
